<resources>
    <string name="app_name">FinalProjectOrange</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_continue_with">Or Continue With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="login">Login</string>
    <string name="deliver_favourite_food">Deliver Favourite Food</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="sign_up_for_free">Sign Up For Free</string>
    <string name="anamwp">Anamwp . . |</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="select_which_contact_details_should_we_use_to_reset_your_password">Select which contact details should we use to reset your password</string>
    <string name="via_sms">Via sms:</string>
    <string name="via_email">Via email:</string>
    <string name="reset_your_password_here">Reset Your Password here</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="congrats">Congrats</string>
    <string name="password_reset_succesful">Password reset succesful</string>
    <string name="find_your_favorite_food">Find Your Favorite Food</string>
    <string name="hint_search">What do you want to order?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="view_more">View More</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="order_details">Order details</string>
    <string name="place_my_order">Place My Order</string>
    <string name="favorite">Favorite</string>
    <string name="you_have_3_vouvher">you have 3 vouvher</string>
    <string name="fill_in_your_bio_to_get_started">Fill in your bio to get started</string>
    <string name="this_data_will_be_displayed_in_your_account_profile_for_security">This data will be displayed in your account profile for security</string>
    <string name="username">UserName</string>
    <string name="phone">Phone</string>
    <string name="upload_your_photo_profile">Upload Your Photo Profile</string>
    <string name="set_your_location">Set Your Location</string>
    <string name="your_location">Your Location</string>
    <string name="your_profile_is_ready_to_use">Your Profile Is Ready To Use</string>
    <string name="thanks_for_using_foodninja">Thanks For using FOODNINJA</string>
</resources>