<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.login.LocationFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_your_location"
        android:textStyle="bold"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_24ssp"
        android:layout_margin="@dimen/_20sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:text="@string/this_data_will_be_displayed_in_your_account_profile_for_security"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/pin_logo"
                android:text="@string/your_location"
                android:textColor="@color/main_color"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:drawablePadding="@dimen/_10sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_your_location_fragment"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="Set Location"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                app:cornerRadius="@dimen/_10sdp"
                android:textAllCaps="false"
                android:textColor="@color/main_color"
                android:backgroundTint="@color/orange_color_alpha"
                android:id="@+id/btn_set_location_fragment"
                android:paddingStart="@dimen/_40sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/next"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        android:background="@drawable/button_gradient"
        android:id="@+id/btn_next_location_fragment"
        android:paddingStart="@dimen/_40sdp"
        android:paddingEnd="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"/>


</LinearLayout>