<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.login.ForgotPasswordFragment"
    android:background="@drawable/pattern_forget"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_margin="@dimen/_20sdp"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_which_contact_details_should_we_use_to_reset_your_password"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_90sdp"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_12ssp"
        />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:elevation="@dimen/_5sdp"
        app:contentPadding="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/message1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/via_sms"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:textSize="@dimen/_16ssp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="*** *** 1234"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="normal"
                    android:textColor="@color/main_color"/>
            </LinearLayout>



        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:elevation="@dimen/_5sdp"
        app:contentPadding="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/message1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/via_email"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:textSize="@dimen/_16ssp"/>
                <TextView
                    android:id="@+id/tv_via_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="*** *** @gmail.com"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="normal"
                    android:textColor="@color/main_color"/>
            </LinearLayout>



        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/btn_next_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/text_gradient"
        android:paddingStart="@dimen/_40sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_40sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/next"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_150sdp"
        app:backgroundTint="@null"

        />


</LinearLayout>