<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.login.CongratsFragment"
    android:background="@drawable/pattern"
    android:gravity="center">

    <ImageView
        android:id="@+id/image_sucess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/success_illustration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textColor="#53E88B"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_sucess"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/congrats"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_profile_is_ready_to_use"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/congrats"
        android:id="@+id/reset_sucess"/>



    <com.google.android.material.button.MaterialButton

        android:id="@+id/btn_next_congrats_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:backgroundTint="@null"
        android:paddingStart="@dimen/_40sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_40sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/next"
        android:textSize="@dimen/_14ssp"
        app:cornerRadius="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textAllCaps="false"
        android:background="@drawable/text_gradient"
        />

</androidx.constraintlayout.widget.ConstraintLayout>